--- a/html/patrodent_002_p.css
+++ b/html/patrodent_002_p.css
@@ -90,7 +90,7 @@ span#e26            { /* patrodent001008.gif */
 	width           : 459.00pt;
 	height          :  15.00pt;
 	}
-h4#e25              { /* Dra. Patrocinio Gómez Ma... */
+h4#e25              { /* Dra. Patrocinio GÃ³mez Ma... */
 	font            : bold 14pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
 	text-align      : center;
 	position        : absolute;
@@ -99,7 +99,7 @@ h4#e25              { /* Dra. Patrocinio Gómez Ma... */
 	width           : 459.00pt;
 	height          :  20.25pt;
 	}
-div#e24             { /* La Dra. Patrocinio Gómez... */
+div#e24             { /* La Dra. Patrocinio GÃ³mez... */
 	font            : 11pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
 	text-align      : center;
 	position        : absolute;
@@ -154,7 +154,7 @@ div#e18             { /* &nbsp;C/ Marques de Para... */
 	width           : 157.50pt;
 	height          :  23.25pt;
 	}
-div#e17             { /* Clínica Dental\ \PATROCI... */
+div#e17             { /* ClÃ­nica Dental\ \PATROCI... */
 	position        : absolute;
 	left            :   3.00pt;
 	top             :  44.25pt;
