--- a/html/patrodent_006_p.css
+++ b/html/patrodent_006_p.css
@@ -140,7 +140,7 @@ div#e25             { /* &nbsp;C/ Marques de Para... */
 	width           : 157.50pt;
 	height          :  23.25pt;
 	}
-div#e24             { /* Clínica Dental\ \PATROCI... */
+div#e24             { /* ClÃ­nica Dental\ \PATROCI... */
 	position        : absolute;
 	left            :   3.00pt;
 	top             :  44.25pt;
@@ -217,7 +217,7 @@ div#e15             { /* ODONTOLOGIA GENERAL */
 	width           : 158.25pt;
 	height          :  18.75pt;
 	}
-div#e14             { /* La Clínica de la Dra. Pa... */
+div#e14             { /* La ClÃ­nica de la Dra. Pa... */
 	font            : 11pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
 	text-align      : center;
 	position        : absolute;
@@ -244,7 +244,7 @@ div#e12             { /* El cepillado de dientes ... */
 	width           : 443.25pt;
 	height          : 107.25pt;
 	}
-h4#e11              { /* Técnica para un Cepillad... */
+h4#e11              { /* TÃ©cnica para un Cepillad... */
 	font            : bold 12pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
 	text-align      : center;
 	position        : absolute;
