--- a/trunk/html/index_p.css
+++ b/trunk/html/index_p.css
@@ -102,7 +102,7 @@ h4#e25              { /* Bienvenidos a nuestra Cl... */
 	width           : 459.00pt;
 	height          :  23.25pt;
 	}
-div#e24             { /* La clínica dental de la ... */
+div#e24             { /* La clÃ­nica dental de la ... */
 	font            : 11pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
 	text-align      : center;
 	position        : absolute;
@@ -164,7 +164,7 @@ div#e17             { /* &nbsp;C/ Marques de Para... */
 	width           : 157.50pt;
 	height          :  23.25pt;
 	}
-div#e16             { /* Clínica Dental\ \PATROCI... */
+div#e16             { /* ClÃ­nica Dental\ \PATROCI... */
 	position        : absolute;
 	left            :   3.00pt;
 	top             :  44.25pt;
