--- a/trunk/html/patrodent_003_p.css
+++ b/trunk/html/patrodent_003_p.css
@@ -87,7 +87,7 @@ span#e24            { /* patrodent001008.gif */
 	width           : 459.00pt;
 	height          :  15.00pt;
 	}
-h4#e23              { /* Plano de Situación */
+h4#e23              { /* Plano de SituaciÃ³n */
 	font            : bold 14pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
 	color           : #ffffff;
 	text-align      : center;
@@ -97,7 +97,7 @@ h4#e23              { /* Plano de Situación */
 	width           : 459.00pt;
 	height          :  20.25pt;
 	}
-div#e22             { /* La clínica de la Dra. Pa... */
+div#e22             { /* La clÃ­nica de la Dra. Pa... */
 	font            : 11pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
 	text-align      : center;
 	position        : absolute;
@@ -152,7 +152,7 @@ div#e16             { /* &nbsp;C/ Marques de Para... */
 	width           : 157.50pt;
 	height          :  23.25pt;
 	}
-div#e15             { /* Clínica Dental\ \PATROCI... */
+div#e15             { /* ClÃ­nica Dental\ \PATROCI... */
 	position        : absolute;
 	left            :   3.00pt;
 	top             :  44.25pt;
@@ -257,7 +257,7 @@ div#e2              { /* Volver       */
 	width           :  59.25pt;
 	height          :  15.75pt;
 	}
-h4#e1               { /* Plano de Situación */
+h4#e1               { /* Plano de SituaciÃ³n */
 	font            : bold 14pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
 	text-align      : center;
 	position        : absolute;
