--- a/trunk/html/patrodent_004_p.css
+++ b/trunk/html/patrodent_004_p.css
@@ -99,7 +99,7 @@ h4#e26              { /* Instalaciones */
 	width           : 459.00pt;
 	height          :  20.25pt;
 	}
-div#e25             { /* La clínica esta dotada d... */
+div#e25             { /* La clÃ­nica esta dotada d... */
 	font            : 11pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
 	text-align      : center;
 	position        : absolute;
@@ -154,7 +154,7 @@ div#e19             { /* &nbsp;C/ Marques de Para... */
 	width           : 157.50pt;
 	height          :  23.25pt;
 	}
-div#e18             { /* Clínica Dental\ \PATROCI... */
+div#e18             { /* ClÃ­nica Dental\ \PATROCI... */
 	position        : absolute;
 	left            :   3.00pt;
 	top             :  44.25pt;
