--- a/trunk/html/patrodent_005_p.css
+++ b/trunk/html/patrodent_005_p.css
@@ -146,7 +146,7 @@ div#e30             { /* &nbsp;C/ Marques de Para... */
 	width           : 157.50pt;
 	height          :  23.25pt;
 	}
-div#e29             { /* Clínica Dental\ \PATROCI... */
+div#e29             { /* ClÃ­nica Dental\ \PATROCI... */
 	position        : absolute;
 	left            :   3.00pt;
 	top             :  44.25pt;
