--- a/trunk/html/patrodent_007_p.css
+++ b/trunk/html/patrodent_007_p.css
@@ -140,7 +140,7 @@ div#e20             { /* &nbsp;C/ Marques de Para... */
 	width           : 157.50pt;
 	height          :  23.25pt;
 	}
-div#e19             { /* Clínica Dental\ \PATROCI... */
+div#e19             { /* ClÃ­nica Dental\ \PATROCI... */
 	position        : absolute;
 	left            :   3.00pt;
 	top             :  44.25pt;
