--- a/trunk/html/patrodent_008_p.css
+++ b/trunk/html/patrodent_008_p.css
@@ -140,7 +140,7 @@ div#e19             { /* &nbsp;C/ Marques de Para... */
 	width           : 157.50pt;
 	height          :  23.25pt;
 	}
-div#e18             { /* Clínica Dental\ \PATROCI... */
+div#e18             { /* ClÃ­nica Dental\ \PATROCI... */
 	position        : absolute;
 	left            :   3.00pt;
 	top             :  44.25pt;
@@ -217,7 +217,7 @@ div#e9              { /* ODONTOPEDIATRIA */
 	width           : 259.50pt;
 	height          :  17.25pt;
 	}
-div#e8              { /* La odontología infantil ... */
+div#e8              { /* La odontologÃ­a infantil ... */
 	font            : 11pt 'Trebuchet MS', 'Lucida Grande', Arial, sans-serif;
 	text-align      : center;
 	position        : absolute;
