--- a/html/css/patrodent_005_p.css
+++ b/html/css/patrodent_005_p.css
@@ -48,7 +48,7 @@
 	text-align      : center;
 	}
 span#e41            { /* patrodent001012.gif */
-	background      : transparent url(patrodent001012.gif) no-repeat top left;
+	background      : transparent url(../images/patrodent001012.gif) no-repeat top left;
 	position        : absolute;
 	left            :   1.50pt;
 	top             :   0.00pt;
@@ -57,7 +57,7 @@ span#e41            { /* patrodent001012.gif */
 	}
 span#e40            { /* patrodent001011.gif */
 	clip            : rect(0.00pt,103.50pt,6.75pt,0.00pt);
-	background      : transparent url(patrodent001011.gif) no-repeat top left;
+	background      : transparent url(../images/patrodent001011.gif) no-repeat top left;
 	position        : absolute;
 	left            :   1.50pt;
 	top             :   0.00pt;
@@ -66,7 +66,7 @@ span#e40            { /* patrodent001011.gif */
 	}
 span#e39            { /* patrodent001010.gif */
 	clip            : rect(0.00pt,459.00pt,6.75pt,0.00pt);
-	background      : transparent url(patrodent001010.gif) no-repeat top left;
+	background      : transparent url(../images/patrodent001010.gif) no-repeat top left;
 	position        : absolute;
 	left            : 105.00pt;
 	top             :   0.00pt;
@@ -75,7 +75,7 @@ span#e39            { /* patrodent001010.gif */
 	}
 span#e38            { /* patrodent001009.gif */
 	clip            : rect(0.00pt,103.50pt,15.00pt,0.00pt);
-	background      : transparent url(patrodent001009.gif) no-repeat top left;
+	background      : transparent url(../images/patrodent001009.gif) no-repeat top left;
 	position        : absolute;
 	left            :   1.50pt;
 	top             :  96.00pt;
@@ -84,7 +84,7 @@ span#e38            { /* patrodent001009.gif */
 	}
 span#e37            { /* patrodent001008.gif */
 	clip            : rect(0.00pt,459.00pt,15.00pt,0.00pt);
-	background      : transparent url(patrodent001008.gif) no-repeat top left;
+	background      : transparent url(../images/patrodent001008.gif) no-repeat top left;
 	position        : absolute;
 	left            : 105.00pt;
 	top             :  96.00pt;
@@ -101,7 +101,7 @@ h4#e36              { /* Servicios */
 	height          :  20.25pt;
 	}
 span#e35            { /* patrodent2001001.jpg */
-	background      : transparent url(patrodent2001001.jpg) no-repeat top left;
+	background      : transparent url(../images/patrodent2001001.jpg) no-repeat top left;
 	position        : absolute;
 	left            :   0.75pt;
 	top             :   6.75pt;
@@ -186,7 +186,7 @@ h4#e25              { /* CITAS */
 	height          :  20.25pt;
 	}
 span#e24            { /* patrodent001007.gif */
-	background      : transparent url(patrodent001007.gif) no-repeat top left;
+	background      : transparent url(../images/patrodent001007.gif) no-repeat top left;
 	position        : absolute;
 	left            :  26.25pt;
 	top             : 140.25pt;
@@ -194,7 +194,7 @@ span#e24            { /* patrodent001007.gif */
 	height          :  36.00pt;
 	}
 span#e23            { /* patrodent005002.gif */
-	background      : transparent url(patrodent005002.gif) no-repeat top left;
+	background      : transparent url(../images/patrodent005002.gif) no-repeat top left;
 	position        : absolute;
 	left            :  15.00pt;
 	top             : 240.75pt;
@@ -202,7 +202,7 @@ span#e23            { /* patrodent005002.gif */
 	height          :   0.75pt;
 	}
 span#e22            { /* patrodent005001.gif */
-	background      : transparent url(patrodent005001.gif) no-repeat top left;
+	background      : transparent url(../images/patrodent005001.gif) no-repeat top left;
 	position        : absolute;
 	left            :  15.00pt;
 	top             : 390.75pt;
@@ -357,7 +357,7 @@ div#e1              { /* Volver       */
 	height          :  15.75pt;
 	}
 div#page            { /* Page Holder */
-	background-image: url(back_bus21.gif);
+	background-image: url(../images/back_bus21.gif);
 	position        : relative;
 	width           : 570.00pt;
 	height          : 645.00pt;
