--- a/html/css/patrodent_007_p.css
+++ b/html/css/patrodent_007_p.css
@@ -51,7 +51,7 @@
 	text-align      : center;
 	}
 span#e30            { /* patrodent001012.gif */
-	background      : transparent url(patrodent001012.gif) no-repeat top left;
+	background      : transparent url(../images/patrodent001012.gif) no-repeat top left;
 	position        : absolute;
 	left            :   1.50pt;
 	top             :   0.00pt;
@@ -60,7 +60,7 @@ span#e30            { /* patrodent001012.gif */
 	}
 span#e29            { /* patrodent001011.gif */
 	clip            : rect(0.00pt,103.50pt,6.75pt,0.00pt);
-	background      : transparent url(patrodent001011.gif) no-repeat top left;
+	background      : transparent url(../images/patrodent001011.gif) no-repeat top left;
 	position        : absolute;
 	left            :   1.50pt;
 	top             :   0.00pt;
@@ -69,7 +69,7 @@ span#e29            { /* patrodent001011.gif */
 	}
 span#e28            { /* patrodent001010.gif */
 	clip            : rect(0.00pt,459.00pt,6.75pt,0.00pt);
-	background      : transparent url(patrodent001010.gif) no-repeat top left;
+	background      : transparent url(../images/patrodent001010.gif) no-repeat top left;
 	position        : absolute;
 	left            : 105.00pt;
 	top             :   0.00pt;
@@ -78,7 +78,7 @@ span#e28            { /* patrodent001010.gif */
 	}
 span#e27            { /* patrodent001009.gif */
 	clip            : rect(0.00pt,103.50pt,15.00pt,0.00pt);
-	background      : transparent url(patrodent001009.gif) no-repeat top left;
+	background      : transparent url(../images/patrodent001009.gif) no-repeat top left;
 	position        : absolute;
 	left            :   1.50pt;
 	top             :  96.00pt;
@@ -87,7 +87,7 @@ span#e27            { /* patrodent001009.gif */
 	}
 span#e26            { /* patrodent001008.gif */
 	clip            : rect(0.00pt,459.00pt,15.00pt,0.00pt);
-	background      : transparent url(patrodent001008.gif) no-repeat top left;
+	background      : transparent url(../images/patrodent001008.gif) no-repeat top left;
 	position        : absolute;
 	left            : 105.00pt;
 	top             :  96.00pt;
@@ -95,7 +95,7 @@ span#e26            { /* patrodent001008.gif */
 	height          :  15.00pt;
 	}
 span#e25            { /* patrodent2001001.jpg */
-	background      : transparent url(patrodent2001001.jpg) no-repeat top left;
+	background      : transparent url(../images/patrodent2001001.jpg) no-repeat top left;
 	position        : absolute;
 	left            :   0.75pt;
 	top             :   6.75pt;
@@ -180,7 +180,7 @@ h4#e15              { /* CITAS */
 	height          :  20.25pt;
 	}
 span#e14            { /* patrodent001007.gif */
-	background      : transparent url(patrodent001007.gif) no-repeat top left;
+	background      : transparent url(../images/patrodent001007.gif) no-repeat top left;
 	position        : absolute;
 	left            :  26.25pt;
 	top             : 140.25pt;
@@ -188,7 +188,7 @@ span#e14            { /* patrodent001007.gif */
 	height          :  36.00pt;
 	}
 span#e13            { /* patrodent007002.gif */
-	background      : transparent url(patrodent007002.gif) no-repeat top left;
+	background      : transparent url(../images/patrodent007002.gif) no-repeat top left;
 	position        : absolute;
 	left            :  15.00pt;
 	top             : 240.75pt;
@@ -196,7 +196,7 @@ span#e13            { /* patrodent007002.gif */
 	height          :   0.75pt;
 	}
 span#e12            { /* patrodent007001.gif */
-	background      : transparent url(patrodent007001.gif) no-repeat top left;
+	background      : transparent url(../images/patrodent007001.gif) no-repeat top left;
 	position        : absolute;
 	left            :  15.00pt;
 	top             : 390.75pt;
@@ -227,7 +227,7 @@ div#e9              { /* El enfoque de este campo... */
 	height          : 137.25pt;
 	}
 span#e8             { /* s2img1.jpg */
-	background      : transparent url(s2img1.jpg) no-repeat top left;
+	background      : transparent url(../images/s2img1.jpg) no-repeat top left;
 	position        : absolute;
 	left            : 189.75pt;
 	top             : 310.50pt;
@@ -286,7 +286,7 @@ div#e1              { /* Volver       */
 	height          :  15.75pt;
 	}
 div#page            { /* Page Holder */
-	background-image: url(back_bus21.gif);
+	background-image: url(../images/back_bus21.gif);
 	position        : relative;
 	width           : 570.00pt;
 	height          : 645.00pt;
