--- a/html/css/patrodent_011_p.css
+++ b/html/css/patrodent_011_p.css
@@ -48,7 +48,7 @@
 	text-align      : center;
 	}
 span#e30            { /* patrodent001012.gif */
-	background      : transparent url(patrodent001012.gif) no-repeat top left;
+	background      : transparent url(../images/patrodent001012.gif) no-repeat top left;
 	position        : absolute;
 	left            :   1.50pt;
 	top             :   0.00pt;
@@ -57,7 +57,7 @@ span#e30            { /* patrodent001012.gif */
 	}
 span#e29            { /* patrodent001011.gif */
 	clip            : rect(0.00pt,103.50pt,6.75pt,0.00pt);
-	background      : transparent url(patrodent001011.gif) no-repeat top left;
+	background      : transparent url(../images/patrodent001011.gif) no-repeat top left;
 	position        : absolute;
 	left            :   1.50pt;
 	top             :   0.00pt;
@@ -66,7 +66,7 @@ span#e29            { /* patrodent001011.gif */
 	}
 span#e28            { /* patrodent001010.gif */
 	clip            : rect(0.00pt,459.00pt,6.75pt,0.00pt);
-	background      : transparent url(patrodent001010.gif) no-repeat top left;
+	background      : transparent url(../images/patrodent001010.gif) no-repeat top left;
 	position        : absolute;
 	left            : 105.00pt;
 	top             :   0.00pt;
@@ -75,7 +75,7 @@ span#e28            { /* patrodent001010.gif */
 	}
 span#e27            { /* patrodent001009.gif */
 	clip            : rect(0.00pt,103.50pt,15.00pt,0.00pt);
-	background      : transparent url(patrodent001009.gif) no-repeat top left;
+	background      : transparent url(../images/patrodent001009.gif) no-repeat top left;
 	position        : absolute;
 	left            :   1.50pt;
 	top             :  96.00pt;
@@ -84,7 +84,7 @@ span#e27            { /* patrodent001009.gif */
 	}
 span#e26            { /* patrodent001008.gif */
 	clip            : rect(0.00pt,459.00pt,15.00pt,0.00pt);
-	background      : transparent url(patrodent001008.gif) no-repeat top left;
+	background      : transparent url(../images/patrodent001008.gif) no-repeat top left;
 	position        : absolute;
 	left            : 105.00pt;
 	top             :  96.00pt;
@@ -92,7 +92,7 @@ span#e26            { /* patrodent001008.gif */
 	height          :  15.00pt;
 	}
 span#e25            { /* patrodent2001001.jpg */
-	background      : transparent url(patrodent2001001.jpg) no-repeat top left;
+	background      : transparent url(../images/patrodent2001001.jpg) no-repeat top left;
 	position        : absolute;
 	left            :   0.75pt;
 	top             :   6.75pt;
@@ -177,7 +177,7 @@ h4#e15              { /* CITAS */
 	height          :  20.25pt;
 	}
 span#e14            { /* patrodent001007.gif */
-	background      : transparent url(patrodent001007.gif) no-repeat top left;
+	background      : transparent url(../images/patrodent001007.gif) no-repeat top left;
 	position        : absolute;
 	left            :  26.25pt;
 	top             : 140.25pt;
@@ -185,7 +185,7 @@ span#e14            { /* patrodent001007.gif */
 	height          :  36.00pt;
 	}
 span#e13            { /* patrodent011004.gif */
-	background      : transparent url(patrodent011004.gif) no-repeat top left;
+	background      : transparent url(../images/patrodent011004.gif) no-repeat top left;
 	position        : absolute;
 	left            :  15.00pt;
 	top             : 240.75pt;
@@ -193,7 +193,7 @@ span#e13            { /* patrodent011004.gif */
 	height          :   0.75pt;
 	}
 span#e12            { /* patrodent011003.gif */
-	background      : transparent url(patrodent011003.gif) no-repeat top left;
+	background      : transparent url(../images/patrodent011003.gif) no-repeat top left;
 	position        : absolute;
 	left            :  15.00pt;
 	top             : 390.75pt;
@@ -224,7 +224,7 @@ div#e9              { /* Los implantes dentales s... */
 	height          : 167.25pt;
 	}
 span#e8             { /* patrodent011002.jpg */
-	background      : transparent url(patrodent011002.jpg) no-repeat top left;
+	background      : transparent url(../images/patrodent011002.jpg) no-repeat top left;
 	position        : absolute;
 	left            : 390.75pt;
 	top             : 399.75pt;
@@ -232,7 +232,7 @@ span#e8             { /* patrodent011002.jpg */
 	height          : 129.00pt;
 	}
 span#e7             { /* patrodent011001.jpg */
-	background      : transparent url(patrodent011001.jpg) no-repeat top left;
+	background      : transparent url(../images/patrodent011001.jpg) no-repeat top left;
 	position        : absolute;
 	left            : 140.25pt;
 	top             : 353.25pt;
@@ -282,7 +282,7 @@ div#e1              { /* Volver       */
 	height          :  15.75pt;
 	}
 div#page            { /* Page Holder */
-	background-image: url(back_bus21.gif);
+	background-image: url(../images/back_bus21.gif);
 	position        : relative;
 	width           : 570.00pt;
 	height          : 645.00pt;
