--- a/trunk/html/css/patrodent_g.css
+++ b/trunk/html/css/patrodent_g.css
@@ -13,7 +13,7 @@ a:visited           { /* Document Style */
 	text-decoration :none;
 	}
 a:hover             { /* Document Style */
-	color           : #ccff00;
+	color           : #501000;
 	text-decoration :none;
 	}
 a:active            { /* Active Links */
