Cambio telefono en el indice

--- a/html/css/index_p.css
+++ b/html/css/index_p.css
@@ -204,12 +204,12 @@ h4#e12              { /* CITAS */
 	height          :  20.25pt;
 	}
 span#e11            { /* patrodent001007.gif */
-	background      : transparent url(../images/patrodent001007.gif) no-repeat top left;
+	background      : transparent url(../images/linphone.png) no-repeat top left;
 	position        : absolute;
-	left            :  26.25pt;
-	top             : 140.25pt;
-	width           :  57.00pt;
-	height          :  36.00pt;
+	left            :  20.25pt;
+	top             : 126.25pt;
+	width           :  76.00pt;
+	height          :  64.00pt;
 	}
 span#e10            { /* patrodent001006.gif */
 	background      : transparent url(../images/patrodent001006.gif) no-repeat top left;
