Termino la refactorizacion de las css

--- a/html/css/patrodent_g.css
+++ b/html/css/patrodent_g.css
@@ -24,7 +24,7 @@ a:hover             { /* Document Style */
 	text-decoration :none;
 	}
 a:active            { /* Active Links */
-	color           : #ccff00;
+	color           : #501000;
 	}
 ol,ul               { /* All Lists */
 	margin          : 1em;
