--- a/html/css/instalaciones.css
+++ b/html/css/instalaciones.css
@@ -53,12 +53,12 @@ h4#e26              { /* Instalaciones */
 	text-align      : center;
 	position        : absolute;
 	left            : 105.00pt;
-	top             : 126.00pt;
+	top             : 147.75pt;
 	width           : 459.00pt;
 	height          :  20.25pt;
 	}
 div#e25             { /* La clínica esta dotada d... */
-	top             : 147.75pt;
+	top             : 190.00pt;
 	height          : 287.25pt;
 	}
 span#e24            { /* patrodent2001001.jpg */
@@ -73,7 +73,7 @@ span#e10            { /* instala1.jpg */
 	background      : transparent url(../images/instala1.jpg) no-repeat top left;
 	position        : absolute;
 	left            : 194.25pt;
-	top             : 226.50pt;
+	top             : 256.50pt;
 	width           : 274.50pt;
 	height          :  96.00pt;
 	}
@@ -81,7 +81,7 @@ span#e9             { /* patrodent004003.jpg */
 	background      : transparent url(../images/patrodent004003.jpg) no-repeat top left;
 	position        : absolute;
 	left            : 267.75pt;
-	top             : 443.25pt;
+	top             : 473.25pt;
 	width           : 129.00pt;
 	height          : 171.75pt;
 	}
@@ -89,7 +89,7 @@ span#e8             { /* patrodent004002.jpg */
 	background      : transparent url(../images/patrodent004002.jpg) no-repeat top left;
 	position        : absolute;
 	left            : 415.50pt;
-	top             : 474.75pt;
+	top             : 504.75pt;
 	width           : 129.75pt;
 	height          :  97.50pt;
 	}
@@ -97,9 +97,19 @@ span#e7             { /* patrodent004001.jpg */
 	background      : transparent url(../images/patrodent004001.jpg) no-repeat top left;
 	position        : absolute;
 	left            : 117.75pt;
-	top             : 474.75pt;
+	top             : 504.75pt;
 	width           : 130.50pt;
 	height          :  97.50pt;
 	}
+div#page {
+    height: 695pt;
+}
+div.copy {
+    top: 675.75pt;
+}
+div.volver {
+    top: 655pt
+}
+
 
 /*--- EndOfFile ---*/
